Mon Apr 10 12:31:14 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/CCM_Core.mpc:
          Removed commented out line

        * DAnCE/ExecutionManager/ExecutionManager.mpc:
        * DAnCE/NodeApplication/NodeApplication.mpc:
        * DAnCE/NodeApplicationManager/NodeApplicationManager.mpc:
        * DAnCE/NodeManager/NodeManager.mpc:
        * DAnCE/StaticConfigurator/StaticDAnCEParser.mpc:
          Updated base projects

Mon Apr 10 11:51:14 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciaosvcs/Events/CIAO_Events_Base/CIAO_Events_Base.mpc:
          Readded ciao_container_dnc

        * ciao/CCM_Core.mpc:
          Use more base projects

        * DAnCE/Interfaces/Interfaces.mpc:
        * DAnCE/ExecutionManager/ExecutionManager.mpc:
          Use other base projects to get correct build order

Mon Apr 10 10:00:14 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciaosvcs/Events/CIAO_Events_Base/CIAO_Events_Base.mpc:
          Removed ciao_container_dnc

Mon Apr 10 09:38:14 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciaosvcs/Events/CIAO_Events.mpc:
          Use ciao_rtevent_dnc as base

Mon Apr 10 09:18:14 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciaosvcs/Events/CIAO_RTEC/CIAO_RTEvent.mpc:
        * ciaosvcs/Events/CIAO_Events.mpc:
          Use ciao_events_base_dnc as base project

Mon Apr 10 09:15:14 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/CCM_Core.mpc:
          For Deployment_Stub use ciao_events_base_dnc and ciao_client_dnc
          as base projects

Mon Apr 10 08:50:14 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciaosvcs/Events/CIAO_Events.mpc:
          Removed ciao_events_dnc as base project, we are building
          this lib right now

        * ciaosvcs/Events/CIAO_Events_Base/CIAO_Events_Base.mpc:
          Use base projects instead of libs

        * ciaosvcs/Events/CIAO_RTEC/CIAO_RTEvent.mpc: