@@ -1,3 +1,11 @@
+Mon Apr 10 14:29:13 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>
+
+        * TAO/CIAO/ciaosvcs/Events/CIAO_RTEC/CIAO_RTEvent.cpp
+        
+          Modified to make _narrow to be called at the first step
+          when connecting supplier and config. Also modified to
+          make debug statements debug_level controlled.
+
 Mon Apr 10 12:31:14 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ciao/CCM_Core.mpc:
